added auth with API-KEY

--- a/whaley-master/src/main/resources/templates/error/403.html
+++ b/whaley-master/src/main/resources/templates/error/403.html
@@ -1,6 +1,6 @@
 <!--
   ~ Developed by Luis (@realluuuuuis)
-  ~ Last modified 16.10.21, 20:48
+  ~ Last modified 16.10.21, 20:52
   ~ Copyright (c) 2021
   -->
 
@@ -8,12 +8,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>404</title>
+    <title>403</title>
 </head>
 <body>
 
-<h1>404 Not Found</h1>
-<p>Unable to find requested resource.</p>
+<h1>403 Forbidden</h1>
+<p>You're not allowed to view this resource.</p>
 
 </body>
 </html>
